# reversi

./: README.md  meson.build
.github/workflows/: checks.yml
src/: game.cpp  game.h  meson.build  reversi.cpp  strategy.cpp  strategy.h
